Push Fire details from map annotations

--- a/AllTheStacks/Base.lproj/Main.storyboard
+++ b/AllTheStacks/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                                 <state key="normal" title="Button 3"/>
                                                 <connections>
                                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vFd-WT-cex"/>
-                                                    <segue destination="qv7-WF-0u3" kind="show" id="LGM-Q8-hqR"/>
+                                                    <segue destination="qv7-WF-0u3" kind="show" identifier="fireDetailsIdentifier" id="LGM-Q8-hqR"/>
                                                 </connections>
                                             </button>
                                         </subviews>
